# focus-mapper

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/focus_mapper/: __init__.py  __main__.py  api.py  cli.py  completer.py  datetime_utils.py  errors.py  format_validators.py  io.py  metadata.py  spec.py  validate.py  wizard.py  wizard_cli.py  wizard_lib.py
src/focus_mapper/gui/: __init__.py  app.py  main.py  ui_utils.py
src/focus_mapper/gui/components/: step_forms.py
src/focus_mapper/gui/views/: editor.py  generator.py  mappings.py  report.py  settings.py  validator.py
src/focus_mapper/mapping/: config.py  executor.py  ops.py
src/focus_mapper/specs/v1_0/: focus_v1_0.json
src/focus_mapper/specs/v1_1/: __init__.py  focus_spec_v1.1.json  focus_v1_1.json
src/focus_mapper/specs/v1_2/: UPSTREAM_SOURCES.md  __init__.py  focus_spec_v1.2.json  focus_v1_2.json
src/focus_mapper/specs/v1_3/: __init__.py  focus_v1_3.json
src/focus_report/: cli.py  completer.py  errors.py  metadata.py  spec.py  validate.py  wizard.py  wizard_cli.py
src/focus_report/mapping/: config.py  executor.py  ops.py
src/focus_report/specs/v1_0/: focus_v1_0.json
src/focus_report/specs/v1_1/: focus_v1_1.json
src/focus_report/specs/v1_2/: UPSTREAM_LICENSE.md  __init__.py  focus_v1_2.json
tests/: test_api.py  test_cli.py  test_completer.py  test_completer_more.py  test_datagenerator_env.py  test_datetime_utils.py  test_format_validators.py  test_gui_report_view.py  test_gui_ui_utils.py  test_io.py  test_main.py  test_mapping_and_validation.py  test_mapping_cast_precision.py  test_mapping_config_errors.py  test_mapping_pandas_expr.py  test_mapping_warnings.py  test_metadata.py  test_metadata_v1_3.py  test_ops_more.py  test_ops_sql.py  test_spec.py  test_spec_more.py  test_timezone_integration.py  test_ui_utils_unit.py  test_validate_more.py  test_validation_overrides.py  test_validation_rainy.py  test_wizard.py  test_wizard_enhancements.py  test_wizard_helpers.py  test_wizard_lib.py  test_wizard_resume.py
tests/fixtures/: focus_invalid_allowed_values.csv  focus_invalid_datetime.csv  focus_invalid_decimal.csv  focus_invalid_decimal_precision.csv  focus_invalid_json.csv  focus_invalid_required_missing.csv  focus_invalid_unknown_column.csv  mapping_basic.yaml  mapping_v1_2.yaml  mapping_v1_3.yaml  telemetry_small.csv
tests/gui/: conftest.py  test_app_startup.py
tools/: generate_test_data.py  populate_focus_spec.py  vendor_focus_v1_2.py
tools/windows/: build.bat  build.ps1  cli_runner.py  focus_mapper.spec  gui_runner.py  wizard_runner.py
