[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "focus-mapper"
version = "0.1.0"
description = "FOCUS report generator (YAML mapping + validator)"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Wallace Wei", email = "wallacewei@live.cn" },
]
license = { file = "LICENSE" }
keywords = ["FinOps", "FOCUS", "cost", "billing", "mapping", "ETL"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries",
  "Topic :: Utilities",
]
urls = { "Homepage" = "https://github.com/wallacewei/focus-mapper", "Repository" = "https://github.com/wallacewei/focus-mapper" }
dependencies = [
  "pandas>=2,<3",
  "PyYAML>=5.4",
  "pyreadline3>=3.5; platform_system == 'Windows'",
]

[project.optional-dependencies]
pandas15 = [
  "pandas>=1.5,<2",
  "numpy<2",
]
parquet = [
  "pyarrow>=14.0",
]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "pyarrow>=14.0",
]

[project.scripts]
focus-mapper = "focus_mapper.cli:main"
focus-mapper-wizard = "focus_mapper.wizard_cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.package-data]
focus_mapper = ["specs/**/*.json"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "--cov=focus_mapper --cov-branch --cov-report=term-missing --cov-report=html --cov-report=xml"
