[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "focus-mapper"
version = "0.3.0"
description = "Generate FinOps FOCUS™ compliant reports from any billing data using simple YAML mapping configuration."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Wallace Wei", email = "wallacewei@live.cn" },
]
license = { file = "LICENSE" }
keywords = ["FinOps", "FOCUS", "cost", "billing", "mapping"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development :: Libraries",
  "Topic :: Utilities",
]
urls = { "Homepage" = "https://github.com/quickwind/focus-mapper", "Repository" = "https://github.com/quickwind/focus-mapper" }
dependencies = [
  "pandas>=1.5,<3",
  "PyYAML>=5.4",
  "pyreadline3>=3.5; platform_system == 'Windows'",
  "iso4217parse>=0.6",
  "duckdb>=1.0",
]

[project.optional-dependencies]
pandas15 = [
  "pandas>=1.5,<2",
  "numpy<2",
]
parquet = [
  "pyarrow>=14.0",
]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "pytest-html",
  "pyarrow>=14.0",
]

[project.scripts]
focus-mapper = "focus_mapper.cli:main"
focus-mapper-wizard = "focus_mapper.wizard_cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.package-data]
focus_mapper = ["specs/**/*.json"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = [".*", "dist", "build", "src", "tools", "test", "htmlcov"]
addopts = "--html=test-report/report.html --cov=focus_mapper --cov-branch --cov-report=term-missing --cov-report=html --cov-report=xml"
